<resources>
    <string name="app_name">MovieMemory</string>

    <!--Bottomメニュー-->
    <string name="title_movies">映画一覧</string>
    <string name="title_category">カテゴリー編集</string>
    <string name="title_search">検索</string>
    <string name="title_setting">設定</string>
    <string name="title_account">アカウント</string>

    <!--映画情報一覧-->
    <string name="tab_name_now_playing">公開中</string>
    <string name="tab_name_coming_soon">公開予定</string>
    <string name="tab_name_past">公開終了</string>
    <string name="message_failure_load_data">データの取得に失敗しました。</string>
    <string name="not_have_movies_label">
        該当する映画はありません。
        \nサーバーから最新の映画情報を取得してください
        \n
        \nサーバーデータの更新頻度はだいたい1週間程度です。
    </string>
    <string name="image_view_content_description">この映画の画像です</string>
    <string name="star_content_description">この映画をお気に入り登録しているかの星画像です</string>

    <!--映画詳細-->
    <string name="trailer_movie_url_link_label">予告動画</string>
    <string name="official_url_link_label">公式サイト</string>
    <string name="film_director_label">監督　:</string>
    <string name="original_author_label">原作者:</string>
    <string name="distribution_label">制作元:</string>
    <string name="make_country_label">制作国:</string>
    <string name="make_year_label">制作年:</string>
    <string name="casts_label">キャスト</string>
    <string name="empty_casts">※1名も登録されていません。</string>
    <string name="my_note_title">観賞記録</string>
    <string name="my_note_desc">各項目をタップし、観賞した記録を残しましょう。</string>
    <string name="watch_date_label">観た日</string>
    <string name="watch_place_label">映画館</string>
    <string name="watch_note_label">メモ</string>
    <string name="watch_item_empty_hint">ー</string>
    <string name="edit_button_label">誤っている箇所を修正</string>
    <string name="movie_edit_error">映画情報の保存に失敗しました。</string>
    <string name="icon_desc_content_description">この映画の詳細情報を示すアイコンです</string>
    <string name="icon_watch_date_content_description">この映画を観た日を示すアイコンです</string>
    <string name="icon_watch_place_content_description">この映画を観た映画館名を示すアイコンです</string>
    <string name="icon_watch_note_content_description">この映画を観た感想等のメモを示すアイコンです</string>

    <!-- カテゴリー設定 -->
    <string name="movie_attach_category_title">カテゴリー設定</string>
    <string name="message_save_success">カテゴリーを設定しました。</string>

    <!-- 映画情報修正 -->
    <string name="movie_edit_title">映画情報の修正</string>
    <string name="movie_edit_title_label">映画名</string>
    <string name="movie_edit_playing_time_label">上映時間</string>
    <string name="movie_edit_play_date_label">公開日</string>
    <string name="movie_edit_overview_label">あらすじ</string>
    <string name="movie_edit_official_url_label">公式サイトのURL</string>
    <string name="movie_edit_trailer_movie_url_label">トレーラー動画のURL</string>
    <string name="movie_edit_film_director_label">監督</string>
    <string name="movie_edit_original_author_label">原作者</string>
    <string name="movie_edit_distribution_label">制作元</string>
    <string name="movie_edit_make_country_label">制作国</string>
    <string name="movie_edit_make_year_label">制作年</string>
    <string name="movie_edit_add_cast_button">追加</string>
    <string name="movie_edit_attention_edit_casts">※キャスト情報の追加や削除は保存ボタンで保存しない限り反映されません。</string>
    <string name="movie_edit_cast_delete_text">キャストから\n「%s」\nを削除します。よろしいですか？</string>
    <string name="movie_edit_icon_casts_content_description">この映画の主要キャスト一覧を示すアイコンです</string>
    <string name="icon_cast_delete_description">このキャストを現在の映画情報から削除することを示すアイコンです</string>
    <string name="movie_edit_message_save_success">映画情報を修正しました。</string>

    <!-- 画像検索ダイアログ -->
    <string name="image_search_dialog_url">https://google.co.jp</string>
    <string name="image_search_dialog_close_label">閉じる</string>

    <!-- キャスト情報ダイアログ -->
    <string name="dialog_title_cast_update">キャスト編集</string>
    <string name="dialog_title_cast_add">キャスト追加</string>
    <string name="dialog_edit_actor_hint">俳優名</string>
    <string name="dialog_edit_char_name_hint">配役名</string>
    <string name="dialog_actor_not_input_error">俳優名は必須です。</string>

    <!-- カテゴリー編集 -->
    <string name="category_desc">カテゴリー名の右にあるカッコは、このカテゴリーに登録されている映画数です。</string>
    <string name="category_name_text">%1$s (%2$d)</string>
    <string name="category_add_dialog_duplicate_message">入力したカテゴリー名は既に登録されています。</string>
    <string name="category_edit_dialog_duplicate_message">
        入力したカテゴリー名は既に登録されています。
        \nOKをタップした場合、編集前のカテゴリーは削除され現在入力されているカテゴリーに統合します。
    </string>
    <string name="category_delete_dialog_message">「%1$s」を削除します。このカテゴリーに登録されている映画情報は全て未設定になりますがよろしいですか？</string>
    <string name="category_dialog_add_title">カテゴリーの新規登録</string>
    <string name="category_dialog_edit_title">カテゴリー名編集</string>
    <string name="category_dialog_delete_title">カテゴリー削除</string>
    <string name="category_dialog_text_input_hint">カテゴリー名</string>
    <string name="category_add_success_message">カテゴリーを登録しました。</string>
    <string name="category_update_success_message">カテゴリー名を更新しました。</string>
    <string name="category_delete_success_message">カテゴリーを削除しました。</string>
    <string name="category_integrate_success_message">カテゴリーを統合しました。</string>

    <!--検索-->
    <string name="search_label_keyword">キーワードで検索する</string>
    <string name="search_label_keyword_desc">映画名やあらすじ、自分用メモからキーワード検索します。</string>
    <string name="search_label_category">カテゴリーで検索する</string>
    <string name="search_label_category_desc">検索したいカテゴリーをタップしてください。</string>
    <string name="search_label_favorite">お気に入りで検索する</string>
    <string name="search_label_favorite_desc">お気に入りスターを1つでも入れた映画を検索します。</string>

    <string name="search_result_menu_suggestion_clear">履歴クリア</string>
    <string name="search_result_suggestion_clear_message">
        検索キーワードの履歴を全てクリアします。よろしいですか？
    </string>
    <string name="search_result_query_hint">キーワードを入力</string>
    <string name="search_result_not_found">該当する映画情報は見つかりませんでした。</string>
    <string name="icon_search_content_description">このアプリに保存されている映画情報のキーワード検索アイコンです</string>
    <string name="icon_suggestion_content_description">キーワード検索の履歴を示すアイコンです</string>

    <!--アカウント情報-->
    <string name="account_not_login_label">
        このアプリは以下のいずれかの方法でログイン可能です。
        \nログインすると映画情報の誤り修正をサーバーに反映することができます。
    </string>
    <string name="account_login_failure">ログインに失敗しました。</string>
    <string name="account_name_no_setting">未設定</string>

    <!--設定-->
    <string name="setting_label_local">映画データ</string>
    <string name="setting_label_local_count">取得済の映画数:</string>
    <string name="setting_label_local_count_loading_label">ロード中…</string>
    <string name="setting_label_local_count_desc">現在アプリに保存されている映画情報数です。</string>
    <string name="setting_label_data_clear">データクリア</string>
    <string name="setting_label_data_clear_desc">保持している映画情報をクリアします。\n（自分用メモはクリアされません。）</string>
    <string name="setting_label_remote">サーバー情報</string>
    <string name="setting_label_remote_update_label">更新データ:</string>
    <string name="setting_label_remote_update_have">あり</string>
    <string name="setting_label_remote_update_none">なし</string>
    <string name="setting_label_remote_description">サーバーが保持している映画データの更新情報です。</string>
    <string name="setting_label_status">ステータス:</string>
    <string name="setting_label_app_info">アプリ情報</string>
    <string name="setting_label_app_version">アプリのバージョン</string>
    <string name="setting_label_license">オープンソースライセンス</string>
    <string name="setting_label_license_desc">このアプリで利用しているOSSの詳細</string>
    <string name="icon_storage_content_description">映画データ数メニューのアイコンです</string>
    <string name="icon_movie_update_request_content_description">サーバー情報を表示している領域を示すアイコンです</string>
    <string name="icon_data_clear_content_description">データクリアメニューのアイコンです</string>
    <string name="icon_app_version_content_description">このアプリのバージョンを表示している領域を示すアイコンです</string>
    <string name="icon_license_content_description">このアプリで利用しているオープンソースソフトウェアのライセンス表示メニューのアイコンです</string>

    <string name="dialog_data_clear_message">
        取得した映画情報をクリアします。よろしいですか？\n
        \n
        データは映画一覧を表示した際、ネットワーク経由で再取得します。\n
        また、自身が編集した鑑賞情報やメモ、お気に入りスターなどはクリアされません。</string>

    <!-- 画面遷移 -->
    <string name="transition_movie_image">movieImage</string>
    <string name="transition_favorite_star1">favoriteStars1</string>
    <string name="transition_favorite_star2">favoriteStars2</string>
    <string name="transition_favorite_star3">favoriteStars3</string>
    <string name="transition_favorite_star4">favoriteStars4</string>
    <string name="transition_favorite_star5">favoriteStars5</string>

</resources>
