<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.search.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/keyword_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/keyword_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/keyword_image_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/icon_search_content_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_search" />

                <TextView
                    android:id="@+id/keyword_label"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/search_label_keyword"
                    app:layout_constraintStart_toEndOf="@+id/keyword_image_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/keyword_label_description"
                    style="@style/TextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/search_label_keyword_desc"
                    app:layout_constraintStart_toEndOf="@+id/keyword_image_icon"
                    app:layout_constraintTop_toBottomOf="@+id/keyword_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/border_keyword"
            style="@style/BorderLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keyword_card_view" />

        <TextView
            android:id="@+id/category_search_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/search_label_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/border_keyword" />

        <TextView
            android:id="@+id/category_search_label_description"
            style="@style/TextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/search_label_category_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_search_label" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_search_label_description" />

        <View
            android:id="@+id/border_categories"
            style="@style/BorderLine"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_categories" />

        <androidx.cardview.widget.CardView
            android:id="@+id/favorite_card_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/border_categories">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/favorite_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/favorite_image_icon"
                    style="@style/FavoriteStar"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/favorite_label"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/search_label_favorite"
                    app:layout_constraintStart_toEndOf="@+id/favorite_image_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/favorite_label_description"
                    style="@style/TextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/search_label_favorite_desc"
                    app:layout_constraintStart_toEndOf="@+id/favorite_image_icon"
                    app:layout_constraintTop_toBottomOf="@+id/favorite_label" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/border_favorite"
            style="@style/BorderLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite_card_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>